--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ quarkus.grpc.clients.hello.host=localhost
 #quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.format=%-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.level=INFO
-quarkus.log.category.?io.arrogantprogrammer?.level=DEBUG
+quarkus.log.category."io.arrogantprogrammer".level=DEBUG
